tests/tooling/fixtures/native/execution/positive/instancetype_return_protocol_qualifier_alias_signature.objc3
module InstancetypeReturnProtocolQualifierAliasSignature;

fn choose(flag: bool, when_true: instancetype, when_false: instancetype) -> instancetype<NSObject> {
  if (flag) {
    return when_true;
  }
  return when_false;
}

fn main() -> i32 {
  return choose(true, 22, 5) + 20;
}
