tests/tooling/fixtures/native/execution/negative/return_bool_generic_suffix_unsupported.objc3
module ReturnBoolGenericSuffixUnsupported;

fn pick(flag: bool) -> bool<NSObject> {
  return flag;
}

fn main() -> i32 {
  if (pick(true)) {
    return 1;
  }
  return 0;
}
